--- a/node-Fullstack/package.json
+++ b/node-Fullstack/package.json
@@ -13,12 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
     "standard": "^16.0.3"
-  }, 
+  },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
   }
